--- a/researcher/templates/researcher/layouts/executive_form.html
+++ b/researcher/templates/researcher/layouts/executive_form.html
@@ -1,55 +1,53 @@
-{% load static%}
-<div class="fixed-back executive_form">
-    <div class="card text-right small-card">
-        <div class="close"></div>
-        <div class="card-head">ثبت سابقه اجرایی</div>
-        <div class="container">
-            <form method="post" url="{% url 'researcher:executive_form' %}" class="ajax-exe-form">
-                {% csrf_token %}
-                <div class="row">
-                    <div class="col-6">
-                        <div class='row duty'>
-                            <div class='col-lg-12'>
-                                <label for='duty'>سمت</label>
-                                <input type='text' id='duty' class='w-100' name="post">
-                            </div>
-                        </div>
+{% load static %}
+<div class="modal fade" id="newExecutiveRecord" tabindex="-1" role="dialog" aria-labelledby="newExecutiveRecordLabel"
+     aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <form method="post" url="{% url 'researcher:executive_form' %}" class="ajax-exe-form">
+            {% csrf_token %}
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h6 class="modal-title default text-right" id="newExecutiveRecordLabel">ثبت سابقه اجرایی</h6>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="container">
                         <div class="row">
-                            <div class='col-lg-2'>
-                                <span class='center-vr'>زمان :</span>
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label for='duty'>سمت</label>
+                                    <input type='text' id='duty' class='w-100' name="post">
+                                </div>
+                                <div class="row">
+                                    <div class='col-sm-12 text-right'>
+                                        <span>زمان :</span>
+                                    </div>
+                                    <div class='col-md-6 mb-3'>
+                                        <input type='text' id='from' class='w-100' name="start" placeholder="از سال">
+                                    </div>
+                                    <div class='col-md-6 mb-3'>
+                                        <input type='text' id='until' class='w-100' name="end" placeholder="تا سال">
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label for='workplace'>نام مجموعه</label>
+                                    <input type='text' id='workplace' class='w-100' name="place">
+                                </div>
+                                <div class="form-group">
+                                    <label for='exe-city'>شهر</label>
+                                    <input type='text' id='exe-city' class='w-100' name="city">
+                                </div>
                             </div>
-                            <div class='col-lg-5 from'>
-                                <label for='from'>از سال</label>
-                                <input type='text' id='from' class='w-100' name="start">
-                            </div>
-                            <div class='col-lg-5 until'>
-                                <label for='until'>تا سال</label>
-                                <input type='text' id='until' class='w-100' name="end">
-                            </div>
-                        </div>
-                        <div class='row workplace'>
-                            <div class='col-lg-12'>
-                                <label for='workplace'>نام مجموعه</label>
-
-                                <input type='text' id='workplace' class='w-100' name="place">
-                            </div>
-                        </div>
-                        <div class="row exe-city">
-                            <div class='col-lg-12'>
-                                <label for='exe-city'>شهر</label>
-                                <input type='text' id='exe-city' class='w-100' name="city">
+                            <div class="col-md-6 d-none d-md-flex">
+                                <img src="{% static '/img/execution.svg' %}" alt="execution img" class="form-image">
                             </div>
                         </div>
                     </div>
-                    <div class="col-6 flex-display">
-                        <img src="{% static '/img/execution.svg' %}" alt="execution img" class="form-image">
-                    </div>
                 </div>
-                <div class="card-footer">
-                    <button class="save-btn" type="submit">افزودن</button>
-                    <button class="reject-btn" type="reset">لغو</button>
+                <div class="modal-footer">
+                    <button type="reset" class="btn btn-secondary" data-dismiss="modal">لغو</button>
+                    <button type="submit" class="btn btn-primary mr-2">افزدون</button>
                 </div>
-            </form>
-        </div>
+            </div>
+        </form>
     </div>
 </div>
