--- a/researcher/templates/researcher/layouts/research_form.html
+++ b/researcher/templates/researcher/layouts/research_form.html
@@ -1,52 +1,54 @@
-{% load static%}
-<div class="fixed-back research_form">
-    <div class="card small-card text-right small-card">
-        <div class="close"></div>
-        <div class="card-head">ثبت سابقه پژوهشی</div>
-        <div class="container">
-            <form method="post" url="{% url 'researcher:studious_form' %}" class="ajax-std-form">
-                {% csrf_token %}
-                <div class="row">
-                    <div class="col-6">
-                        <div class='row subject'>
-                            <div class='col-lg-12'>
-                                <label for='subject'>عنوان طرح پژوهشی</label>
-                                <input type='text' id='subject' class='w-100' name="title">
+{% load static %}
+<div class="modal fade" id="newResearchRecord" tabindex="-1" role="dialog" aria-labelledby="newResearchRecordLabel"
+     aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <form method="post" url="{% url 'researcher:studious_form' %}" class="ajax-std-form">
+            {% csrf_token %}
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h6 class="modal-title default text-right" id="newResearchRecordLabel">ثبت سابقه پژوهشی</h6>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label for='subject'>عنوان طرح پژوهشی</label>
+                                    <input type='text' id='subject' class='w-100' name="title">
+                                </div>
+                                <div class="form-group">
+                                    <label for='admin'>نام مجری</label>
+                                    <input type='text' id='admin' class='w-100' name="presenter">
+                                </div>
+                                <div class="form-group">
+                                    <label for='liable'>مسئول اجرا/همکار</label>
+                                    <input type='text' id='liable' class='w-100' name="responsible">
+                                </div>
+                                <div class="form-group">
+                                    <label class='rankLabel' for='rank' style='width:245px'>وضعیت طرح پژوهشی</label>
+                                    <select class="w-100" id='rank' name="status">
+                                        <option value="" selected dir='rtl'>انتخاب کنید ...</option>
+                                        <option value='1'>در دست اجرا</option>
+                                        <option value='2'>خاتمه یافته</option>
+                                        <option value='3'>متوقف</option>
+                                    </select>
+                                </div>
+                                <div class="form-group">
+
+                                </div>
+                            </div>
+                            <div class="col-md-6 d-none d-md-flex">
+                                <img src="{% static '/img/research.svg' %}" alt="research img" class="form-image">
                             </div>
                         </div>
-                        <div class="row admin">
-                            <div class='col-lg-12'>
-                                <label for='admin'>نام مجری</label>
-                                <input type='text' id='admin' class='w-100' name="presenter">
-                            </div>
-                        </div>
-                        <div class="row liable">
-                            <div class='col-lg-12'>
-                                <label for='liable'>مسئول اجرا/همکار</label>
-                                <input type='text' id='liable' class='w-100' name="responsible">
-                            </div>
-                        </div>
-                        <div class='row rank'>
-                            <div class='col-lg-12 rankDiv'>
-                                <label class='rankLabel' for='rank' style='width:245px'>وضعیت طرح پژوهشی</label>
-                                <select id='rank' name="status">
-                                    <option value="" selected dir='rtl'>انتخاب کنید ...</option>
-                                    <option value='1'>در دست  اجرا</option>
-                                    <option value='2'>خاتمه یافته</option>
-                                    <option value='3'>متوقف</option>
-                                </select>
-                            </div>
-                         </div>
-                    </div>
-                    <div class="col-6 flex-display h-100">
-                        <img src="{% static '/img/research.svg' %}" alt="research img" class="form-image">
                     </div>
                 </div>
-                <div class="card-footer">
-                    <button class="save-btn" type="submit" >افزودن</button>
-                    <button class="reject-btn" type="reset">لغو</button>
+                <div class="modal-footer">
+                    <button type="reset" class="btn btn-secondary" data-dismiss="modal">لغو</button>
+                    <button type="submit" class="btn btn-primary mr-2">افزدون</button>
                 </div>
-            </form>
-        </div>
+            </div>
+        </form>
     </div>
 </div>
