--- a/industry/templates/industry/layouts/expertResume.html
+++ b/industry/templates/industry/layouts/expertResume.html
@@ -12,7 +12,7 @@
                     <div class="col-12">
                         <div class="user-personal-info">
                             <div class="profile">
-                                <img src="" alt="Expert Profile" id="researcher_photo">
+                                <img src="" alt="Expert Profile" id="expert_photo">
                             </div>
                             <div class="row w-100">
                                 <div class="col-12">
@@ -30,14 +30,14 @@
                                     </div>
                                 </div>
                                 <div class="col-12">
-                                    <div class="request-response">
-                                        <button class="border-button confirm-researcher"
-                                                id="researcher-confirm-" value="">تایید
-                                        </button>
-                                        <button class="border-button fail-button refuse-researcher"
-                                                id="researcher-reject-" value="">رد
-                                        </button>
-                                    </div>
+{#                                    <div class="request-response">#}
+{#                                        <button class="border-button confirm-researcher"#}
+{#                                                id="researcher-confirm-" value="">تایید#}
+{#                                        </button>#}
+{#                                        <button class="border-button fail-button refuse-researcher"#}
+{#                                                id="researcher-reject-" value="">رد#}
+{#                                        </button>#}
+{#                                    </div>#}
                                 </div>
                             </div>
                         </div>
@@ -51,21 +51,23 @@
                         </div>
                         <div class="row">
                             <div class="col-12">
-                                <table class="table text-center">
-                                    <thead>
-                                    <tr>
-                                        <td scope="col">مقطع تحصیلی</td>
-                                        <td scope="col">رشته تحصیلی</td>
-                                        <td scope="col">دانشگاه</td>
-                                        <td scope="col">شهر</td>
-                                        <td scope="col">سال اخذ</td>
-                                    </tr>
-                                    </thead>
-                                    <tbody id="expert_scientific_record">
-                                    <tr>
-                                    </tr>
-                                    </tbody>
-                                </table>
+                                <div class="res-table-container">
+                                    <table class="table text-center">
+                                        <thead>
+                                        <tr>
+                                            <td scope="col">مقطع تحصیلی</td>
+                                            <td scope="col">رشته تحصیلی</td>
+                                            <td scope="col">دانشگاه</td>
+                                            <td scope="col">شهر</td>
+                                            <td scope="col">سال اخذ</td>
+                                        </tr>
+                                        </thead>
+                                        <tbody id="expert_scientific_record">
+                                        <tr>
+                                        </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
                             </div>
                         </div>
                         <div class="divide__line text-right">
@@ -74,31 +76,33 @@
                         </div>
                         <div class="row">
                             <div class="col-12">
-                                <table class="table text-center">
-                                    <thead>
-                                    <tr>
-                                        <td scope="col">
-                                            سمت
-                                        </td>
-                                        <td scope="col">
-                                            از
-                                        </td>
-                                        <td scope="col">
-                                            تا
-                                        </td>
-                                        <td scope="col">
-                                            محل خدمت
-                                        </td>
-                                        <td>
-                                            شهر
-                                        </td>
-                                    </tr>
-                                    </thead>
-                                    <tbody id="expert-executive-info">
-                                    <tr>
-                                    </tr>
-                                    </tbody>
-                                </table>
+                                <div class="res-table-container">
+                                    <table class="table text-center">
+                                        <thead>
+                                        <tr>
+                                            <td scope="col">
+                                                سمت
+                                            </td>
+                                            <td scope="col">
+                                                از
+                                            </td>
+                                            <td scope="col">
+                                                تا
+                                            </td>
+                                            <td scope="col">
+                                                محل خدمت
+                                            </td>
+                                            <td>
+                                                شهر
+                                            </td>
+                                        </tr>
+                                        </thead>
+                                        <tbody id="expert-executive-info">
+                                        <tr>
+                                        </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
                             </div>
                         </div>
                         <div class="divide__line text-right">
@@ -107,20 +111,22 @@
                         </div>
                         <div class="row">
                             <div class="col-12">
-                                <table class="table text-center">
-                                    <thead>
-                                    <tr>
-                                        <td scope="col">عنوان طرح پژوهشی</td>
-                                        <td scope="col">نام مجری</td>
-                                        <td scope="col">مسئول اجرا/همکار</td>
-                                        <td scope="col">وضعیت طرح پژوهشی</td>
-                                    </tr>
-                                    </thead>
-                                    <tbody id="expert_research_record">
-                                    <tr>
-                                    </tr>
-                                    </tbody>
-                                </table>
+                                <div class="res-table-container">
+                                    <table class="table text-center">
+                                        <thead>
+                                        <tr>
+                                            <td scope="col">عنوان طرح پژوهشی</td>
+                                            <td scope="col">نام مجری</td>
+                                            <td scope="col">مسئول اجرا/همکار</td>
+                                            <td scope="col">وضعیت طرح پژوهشی</td>
+                                        </tr>
+                                        </thead>
+                                        <tbody id="expert_research_record">
+                                        <tr>
+                                        </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
                             </div>
                         </div>
                         <div class="divide__line text-right">
@@ -129,21 +135,23 @@
                         </div>
                         <div class="row">
                             <div class="col-12">
-                                <table class="table text-center">
-                                    <thead>
-                                    <tr>
-                                        <td scope="col">عنوان</td>
-                                        <td scope="col">تاریخ انتشار</td>
-                                        <td scope="col">محل انتشار</td>
-                                        <td scope="col">Impact Factor</td>
-                                        <td scope="col">تعداد ارجاع</td>
-                                    </tr>
-                                    </thead>
-                                    <tbody id="expert_paper_record">
-                                    <tr>
-                                    </tr>
-                                    </tbody>
-                                </table>
+                                <div class="res-table-container">
+                                    <table class="table text-center">
+                                        <thead>
+                                        <tr>
+                                            <td scope="col">عنوان</td>
+                                            <td scope="col">تاریخ انتشار</td>
+                                            <td scope="col">محل انتشار</td>
+                                            <td scope="col">Impact Factor</td>
+                                            <td scope="col">تعداد ارجاع</td>
+                                        </tr>
+                                        </thead>
+                                        <tbody id="expert_paper_record">
+                                        <tr>
+                                        </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
                             </div>
                         </div>
                         <div class="divide__line text-right mbottom-lg-25">
