--- a/industry/templates/industry/userInfo.html
+++ b/industry/templates/industry/userInfo.html
@@ -235,7 +235,7 @@
                     </div>
                     <div class="tab-pane fade" id="nav-interface" role="tabpanel" aria-labelledby="nav-interface-tab">
                         <div class="card box flow-root-display w-100">
-                            <div class="row">
+                            <div class="row mt-3 mr-0 ml-0">
                                 <div class="col-lg-7 text-right">
                                     <div class="form-group">
                                         <label for="id_fullname">نام</label>
@@ -263,7 +263,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="row">
+                            <div class="row mr-0 ml-0">
                                 <div class="col-lg-3 text-right">
                                     <div class="form-group">
                                         <label for="id_phone_number">تلفن</label>
@@ -278,7 +278,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="row">
+                            <div class="row mr-0 ml-0">
                                 <div class="col-lg-4 text-right">
                                     <div class="form-group">
                                         <label for="id_email">رایانامه</label>
