--- a/researcher/templates/researcher/index.html
+++ b/researcher/templates/researcher/index.html
@@ -74,29 +74,29 @@
     </div>
     <div class="row">
         <div class="col-lg-12 text-right">
-            <nav class="nav-tabs-container">
+            <nav class="nav-tabs-container mb-3">
                 <div class="nav nav-tabs" id="nav-tab" role="tablist">
                     <a class="nav-item nav-link active fs-15" id="nav-all-projects-tab" data-toggle="tab"
-                       href="#nav-all-projects" role="tab" aria-controls="nav-personal-info" aria-selected="true">
-                        جدیدترین پروژه ها
-                    </a>
+                       href="#nav-all-projects"
+                       role="tab"
+                       aria-controls="nav-all-projects" aria-selected="true">جدیدترین پروژه ها</a>
                     <a class="nav-item nav-link fs-15" id="nav-active-projects-tab" data-toggle="tab"
-                       href="#nav-active-projects" role="tab" aria-controls="nav-resume" aria-selected="false">
-                        پروژه‌های در حال انجام
-                    </a>
+                       href="#nav-active-projects"
+                       role="tab"
+                       aria-controls="nav-active-projects" aria-selected="false">پروژه‌های در حال انجام</a>
                     <a class="nav-item nav-link fs-15" id="nav-missed-projects-tab" data-toggle="tab"
-                       href="#nav-missed-projects" role="tab" aria-controls="nav-upload" aria-selected="false">
-                        پروژه‌های غیرقابل‌‌دسترس
-                    </a>
+                       href="#nav-missed-projects"
+                       role="tab"
+                       aria-controls="nav-missed-projects" aria-selected="false">پروژه‌های غیرقابل‌‌دسترس</a>
                     <a class="nav-item nav-link fs-15" id="nav-done-projects-tab" data-toggle="tab"
-                       href="#nav-done-projects" role="tab" aria-controls="nav-upload" aria-selected="false">
-                        پروژه های انجام شده
-                    </a>
+                       href="#nav-done-projects"
+                       role="tab"
+                       aria-controls="nav-done-projects" aria-selected="false">پروژه‌های غیرقابل‌‌دسترس</a>
                 </div>
             </nav>
             <div class="tab-content" id="nav-tabContent">
                 <div class="tab-pane fade show active" id="nav-all-projects" role="tabpanel"
-                     aria-labelledby="nav-personal-info-tab">
+                     aria-labelledby="nav-all-projects-tab">
                     {% for project in new_project_list %}
                         <div class="card box flow-root-display w-100">
                             <div class="box-header">
@@ -235,21 +235,6 @@
                                 </div>
                             </div>
                         </div>
-                        {#                    <div class="card project-item">#}
-                        {#                        <span class="header">{{ project.project_title }} <span#}
-                        {#                                class="sub-header">( {{ project.started }} قبل )</span></span>#}
-                        {#                        <span>#}
-                        {#                            {% for keyword in project.keyword %}#}
-                        {#                                <span class="border-span">{{ keyword.name }}</span>#}
-                        {#                            {% endfor %}#}
-                        {#                        </span>#}
-                        {#                        <span><i class="fas fa-calendar-alt"></i>این پروژه به  <span>8 ساعت</span> وقت در هفته نیاز دارد!</span>#}
-                        {#                        <span><i#}
-                        {#                                class="fas fa-hourglass-end"></i>تا اتمام پروژه <span>{{ project.finished }}</span> فرصت باقی است!</span>#}
-                        {#                        <button type="button" class="chamran-btn-info my-project" value="myproject"#}
-                        {#                                id="{{ project.PK }}">مشاهده#}
-                        {#                        </button>#}
-                        {#                    </div>#}
                     {% empty %}
                         <div class="col-12 text-center">
                             <div class="empty-page">
@@ -273,13 +258,13 @@
                                 <div class="data-modified">
                                     <span>{{ project.started }}   قبل </span>
                                 </div>
-                                {#                            <div class="project-techniques">#}
-                                {#                                <ul class="mix-list hover">#}
-                                {#                                    {% for keyword in project.keyword %}#}
-                                {#                                        <li>{{ keyword.name }}</li>#}
-                                {#                                    {% endfor %}#}
-                                {#                                </ul>#}
-                                {#                            </div>#}
+                                <div class="project-techniques">
+                                    <ul class="mix-list hover">
+                                        {% for keyword in project.keyword %}
+                                            <li>{{ keyword.name }}</li>
+                                        {% endfor %}
+                                    </ul>
+                                </div>
                             </div>
                             <div class="box-body">
                                 <div class="row">
@@ -322,18 +307,18 @@
                                 </div>
                             </div>
                         </div>
-                        {#                    <div class="card project-item">#}
-                        {#                        <span class="header">{{ project.project_title }} <span#}
-                        {#                                class="sub-header">( {{ project.started }} قبل )</span></span>#}
-                        {#                        <span>#}
-                        {#                            {% for keyword in project.keyword %}#}
-                        {#                                <span class="border-span">{{ keyword.name }}</span>#}
-                        {#                            {% endfor %}#}
-                        {#                        </span>#}
-                        {#                        <span><i class="fas fa-calendar-alt"></i>این پروژه به  <span>8 ساعت</span> وقت در هفته نیاز دارد!</span>#}
-                        {#                        <span><i#}
-                        {#                                class="fas fa-hourglass-end"></i>تا اتمام پروژه <span>{{ project.finished }}</span> فرصت باقی است!</span>#}
-                        {#                    </div>#}
+                        <div class="card project-item">
+                                                <span class="header">{{ project.project_title }} <span
+                                                        class="sub-header">( {{ project.started }} قبل )</span></span>
+                            <span>
+                                                    {% for keyword in project.keyword %}
+                                                        <span class="border-span">{{ keyword.name }}</span>
+                                                    {% endfor %}
+                                                </span>
+                            <span><i class="fas fa-calendar-alt"></i>این پروژه به  <span>8 ساعت</span> وقت در هفته نیاز دارد!</span>
+                            <span><i
+                                    class="fas fa-hourglass-end"></i>تا اتمام پروژه <span>{{ project.finished }}</span> فرصت باقی است!</span>
+                        </div>
                     {% empty %}
                         <div class="col-12 text-center">
                             <div class="empty-page">
