--- a/industry/templates/industry/index.html
+++ b/industry/templates/industry/index.html
@@ -154,7 +154,7 @@
                                 </div>
                                 <div class="col-md-6 col-4">
                                     <a href="{% url 'industry:show_active_project' code=project.code %}">
-                                        <button class="default-btn" type="button">
+                                        <button class="default-btn" type="button" id="{{ project.id }}">
                                             مشاهده
                                         </button>
                                     </a>
