show enters in industry

--- a/researcher/templates/researcher/question.html
+++ b/researcher/templates/researcher/question.html
@@ -67,7 +67,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row mt-5 mb-5">
                         <div class="col-md-4">
                             picture
                         </div>
@@ -109,7 +109,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row mb-5">
                         <div class="col-md-8 text-right">
                             <h6>نحوه امتیازدهی</h6>
                             <hr>
@@ -131,10 +131,10 @@
                     </div>
                     <div class="row">
                         <div class="col-12 text-center">
-                            <p>
-                                پیشنهاد می‌شود جهت یادگیری «نحوه جستجوی هدفمند مقالات در بانک مقالات» ویدیوی زیر را
-                                مشاهده نمایید.
-                            </p>
+{#                            <p>#}
+{#                                پیشنهاد می‌شود جهت یادگیری «نحوه جستجوی هدفمند مقالات در بانک مقالات» ویدیوی زیر را#}
+{#                                مشاهده نمایید.#}
+{#                            </p>#}
                             {#                            <video width="550" height="350" controls>#}
                             {#                                <source src="/media/VIDEO0041.mp4" type="video/mp4">#}
                             {#                                Your browser does not support the video tag.#}
